[gd_scene load_steps=8 format=3 uid="uid://b3nbb5dyb0s0l"]

[ext_resource type="Texture2D" uid="uid://bkuvxjs6xrjpp" path="res://sprites/dulap_scene.png" id="1_sumu5"]
[ext_resource type="Script" path="res://dulap.gd" id="1_wnjbe"]
[ext_resource type="Texture2D" uid="uid://b4s6qu5wgw83a" path="res://sprites/2d_lights_and_shadows_neutral_point_light.webp" id="2_5s1yi"]
[ext_resource type="Texture2D" uid="uid://ds64elelb0d4q" path="res://sprites/dulap_scene_inchis.png" id="3_rvee0"]
[ext_resource type="Texture2D" uid="uid://m05tk07uvocm" path="res://sprites/lumina_hol.png" id="3_wgoql"]
[ext_resource type="Texture2D" uid="uid://dgumgriff7pj8" path="res://sprites/Screenshot_2024-04-07_101427-removebg-preview.png" id="6_aipvb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2hy4"]
size = Vector2(2021.5, 123)

[node name="dulap" type="Node2D"]
script = ExtResource("1_wnjbe")

[node name="dulap_deschis" type="Sprite2D" parent="."]
position = Vector2(960, 536)
scale = Vector2(28.9857, 30.6857)
texture = ExtResource("1_sumu5")

[node name="dulap_inchis" type="Sprite2D" parent="."]
position = Vector2(960, 536)
scale = Vector2(28.9857, 30.6857)
texture = ExtResource("3_rvee0")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.85
blend_mode = 1

[node name="LuminaMare" type="PointLight2D" parent="."]
position = Vector2(947, 655)
scale = Vector2(0.84933, 0.875)
energy = 1.7
texture = ExtResource("2_5s1yi")
texture_scale = 3.5

[node name="LuminaMica" type="PointLight2D" parent="."]
position = Vector2(958, 535)
scale = Vector2(1.26719, 0.898333)
energy = 0.3
texture = ExtResource("3_wgoql")
texture_scale = 2.0

[node name="Go_Back" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Go_Back"]
position = Vector2(960.25, 1007)
shape = SubResource("RectangleShape2D_l2hy4")

[node name="jason" type="Sprite2D" parent="."]
position = Vector2(955, 630)
texture = ExtResource("6_aipvb")

[node name="JasonTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DoorHeldTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 757.0
offset_right = 1163.0
offset_bottom = 919.0
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="Go_Back" to="." method="_on_go_back_mouse_entered"]
[connection signal="timeout" from="JasonTimer" to="." method="_on_jason_timer_timeout"]
[connection signal="timeout" from="DoorHeldTimer" to="." method="_on_door_held_timer_timeout"]
